--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-webrtc-call-recorder",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Record WebRTC calls locally on device with support for React Native and Expo",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -19,7 +19,7 @@
     "expo",
     "native-module"
   ],
-  "author": "Your Name",
+  "author": "Braz Suthar",
   "license": "MIT",
   "repository": {
     "type": "git",
